# rcpufetch

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
src/: cla.rs  main.rs
src/art/: logos.rs  mod.rs
src/linux/: linux.rs
src/macos/: macos.rs  mod.rs
src/windows/: mod.rs  windows.rs
