[package]
name = "rcpufetch"
version = "0.0.2"
edition = "2024"
authors = [
    "Kenneth Alexander Jenkins <Kjenkins60@gatech.edu>",
    "Alan Daniel Aguilar <Aaguilar60@gatech.edu>",
]
description = "[ALPHA] A rusty crossplatform, but simple CLI binutil for reading CPU information."
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/rockenman1234/rcpufetch"
keywords = [
    "cpu",
    "system-info",
    "hardware",
    "cli-tools",
    "cross-platform",
]
categories = [
    "command-line-utilities",
    "os",
    "hardware-support",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }